# lab5

./: CMakeLists.txt  carddialog.cpp  carddialog.h  mainwindow.cpp  mainwindow.h  parent  parent.h
